# audiobook

./: .gitignore  Makefile  README.md  docker-compose.yml  environment.example  schema.dbml  setup-env.sh
apps/backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  env.example  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: d0a3a181d787_initial_audiobook_e_commerce_schema.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: api.py
apps/backend/app/api/v1/endpoints/: audio_files.py  audiobooks.py  categories.py  health.py
apps/backend/app/core/: auth.py  config.py  spaces.py
apps/backend/app/models/: __init__.py  audio_file.py  audiobook.py  cart.py  category.py  download_log.py  enums.py  library.py  order.py  review.py  transcription.py  user.py
apps/backend/app/repositories/: __init__.py  audio_file.py  audiobook.py  base.py  cart.py  category.py  download_log.py  library.py  order.py  review.py  transcription.py  user.py
apps/backend/app/schemas/: audio_file.py  audiobook.py  auth.py  category.py
apps/backend/tests/: test_health.py
apps/frontend/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
apps/frontend/src/: middleware.ts
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/admin/: page.tsx
apps/frontend/src/components/admin/: admin-layout.tsx  create-category-dialog.tsx  file-upload.tsx  sidebar.tsx
apps/frontend/src/components/ui/: unified-sidebar.tsx
apps/frontend/src/stores/: audiobooks.ts  categories.ts  index.ts
(+13 files in other folders)
